--- a/builder/css/style.css
+++ b/builder/css/style.css
@@ -1,20 +1,49 @@
 /* List of Supremes */
 .supremes-list {
-    background-color: #333333;
+    background-color: #EEEEEE;
 }
 
 .supreme-list-element {
     height: 200px;
-    margin: 2px;
-    border-width: 4px;
-    border-style: inset;
-    padding: 5px;
+    border-width: 1px;
+    border-color: #777777;
+    border-style: solid;
+    padding: 0px;
+    background-color: #DDDDDD;
+    background:  linear-gradient(#BBBBBB, #DDDDDD 15%, #FFFFFF 25%);
+    color: #000000;
+}
+
+.supreme-list-element .bottom-footer {
+    position:absolute; 
+    bottom:0px;
+}
+
+.supreme-list-element .supreme-name {
+    float: left; 
+    width: 130px; 
+    height: 50px;
+    margin-left: 3px;
+    font-size: 16;
+    font-weight: bold;
+    text-align: center;
+}
+
+.supreme-list-element .info-icons {
+    float: right;
+}
+
+.info-icon {
+    height: 25px; 
+    width: 25px; 
+    margin-top:2px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 1px;
     background-position: right top;
-    background-size: 20px 20px;
+    background-size: 25px 25px;
     background-repeat: no-repeat;
     background-origin: content-box;
-    background-color: #111111;
-    color: #DDDDDD;
 }
 
 /* Selected supremes */
@@ -42,15 +71,26 @@
 /* Supreme Origin */
 .supreme-origin-mystery {
     background-image: url("../img/origin_mystery.png");
-    border-color: #DD0000;
-}
-
-.supreme-origin-nature {
-    background-image: url("../img/origin_nature.png");    
-    border-color: #0050DD;
+    border-color: #D00;
 }
 
 .supreme-origin-science {
-    background-image: url("../img/origin_science.png");
+    background-image: url("../img/origin_science_shadowed.png");
     border-color: #F8C70D;
+}
+
+.supreme-origin-nature {
+    background-image: url("../img/origin_nature.png");
+    border-color: #0050DD;
+}
+
+/* Hero or Villain ? */
+.hero-villain-10 {
+    background-image: url("../img/hero.png");
+}
+.hero-villain-01 {
+    background-image: url("../img/villain.png");
+}
+.hero-villain-11 {
+    background-image: url("../img/herovillain.png");
 }
