--- a/builder/css/style.css
+++ b/builder/css/style.css
@@ -18,6 +18,13 @@
 .supreme-list-element .bottom-footer {
     position:absolute; 
     bottom:0px;
+	width:100%;
+}
+
+.footer-buttons {
+	position: absolute;
+	bottom: 2px;
+	right: 2px;
 }
 
 .header .supreme-name {
