--- a/builder/css/style.css
+++ b/builder/css/style.css
@@ -77,11 +77,18 @@ img.supreme-freelance {
 
 /* Selected supremes */
 .supremes-selected-list {
-    background-color: #222222;
-    border-width: 4px;
-    border-style: inset;
-    border-color: #CCCCCC;
-    color: #CCCCCC;
+    background-color: #EEEEEE;
+}
+
+.supremes-selected-list .section-title {
+	text-align: center;
+	font-size: 18;
+	font-weight: bold;
+}
+
+.supremes-selected-list .btn-toolbar {
+	margin-top: 2px;
+	margin-bottom: 3px;
 }
 
 .supreme-selected-list-element {
