--- a/builder/css/style.css
+++ b/builder/css/style.css
@@ -62,6 +62,77 @@ img.supreme-freelance {
 	float: left;
 }
 
+/* Header on the modal view */
+.modal-header {
+    background:  linear-gradient(#BBBBBB, #DDDDDD 45%, #FFFFFF 90%);    
+}
+
+.header-modal .supreme-name {
+    float: none; 
+    width: auto;
+	overflow: hidden;
+    height: 50px;
+    margin-left: 3px;
+    font-size: 28;
+    font-weight: bold;
+    text-align: center;
+}
+
+.header-modal .supreme-thumbnail {
+	width: 60px;
+	float: left;
+}
+
+/* Elements from the Modal view */
+.modal-body .info-icons {
+    width: 27px;
+	float: right;
+}
+
+.table-traits {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.traits-value {
+    text-align: center;
+    font-size: 23;
+    padding: 0px 7px;
+}
+
+.traits-separator {
+    background: #000000;
+}
+
+.traits-trump-1 {
+    background: #DE0F0F;
+    color: #DADADA;
+}
+
+.informations-left-modal {
+    float: left;
+}
+
+.exclusive-minion-name {
+    font-weight: bold;
+}
+
+.supreme-description {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 5px;
+    padding: 10px;
+    background-color: #D5D5D5;
+    border: 1px solid #7F7F7F;
+    font-style: italic;
+    text-align: center;
+}
+
+.supreme-links {
+	margin-top: 10px;
+}
+
+/* Icons */
 .info-icon {
     height: 25px; 
     width: 25px; 
@@ -73,6 +144,12 @@ img.supreme-freelance {
     background-size: 25px 25px;
     background-repeat: no-repeat;
     background-origin: content-box;
+}
+
+.icon-element {
+    height: 20px; 
+    width: 20px; 
+    margin-left: 6px;
 }
 
 /* Selected supremes */
@@ -206,4 +283,8 @@ img.supreme-freelance {
 }
 .faction-ulthar{
 	color: #2090FF;
+}
+
+.clear-both {
+    clear: both;
 }
