Fixes #4 - Exclusive minions displayed in the Team summary Team Summary displayed as "Definition List"

--- a/builder/css/style.css
+++ b/builder/css/style.css
@@ -295,6 +295,14 @@ img.supreme-freelance {
 	color: #2090FF;
 }
 
+.team-summary dl{
+	margin-bottom: 0px;
+}
+.team-summary-exclusiveminions {
+	font-weight: bold;
+	margin-left: 15px;
+}
+
 .clear-both {
     clear: both;
 }
