--- a/builder/css/style.css
+++ b/builder/css/style.css
@@ -303,6 +303,13 @@ img.supreme-freelance {
 	margin-left: 15px;
 }
 
+/* Faction card */
+.faction-card {
+	margin-bottom: 6px;
+	margin-top: 4px;
+	padding: 5px;
+}
+
 .clear-both {
     clear: both;
 }
