--- a/builder/css/test.css
+++ b/builder/css/test.css
@@ -85,9 +85,29 @@ h2 {
   display: flex;
 }
 
-.roster-resume {
+.team-affiliation {
+  padding: 5px;
+  width: 140px;
+  height: 140px;
   margin: 10px;
   color: black;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 3px;
+  font-family: 'Bangers', cursive;
+}
+
+.team-affiliation img {
+  max-width: 120px;
+  max-height: 70px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.roster-resume {
+  margin: 10px;
   font-family: 'Bangers', cursive;
 }
 
