--- a/builder/css/test.css
+++ b/builder/css/test.css
@@ -96,6 +96,7 @@ h2 {
   border-style: solid;
   border-width: 3px;
   font-family: 'Bangers', cursive;
+  position: relative;
 }
 
 .team-affiliation img {
@@ -107,12 +108,11 @@ h2 {
 }
 
 .roster-mask {
-  position:relative;
-  top:-152px;
-  left: -8px;
-  padding: 5px;
-  width: 140px;
-  height: 140px;
+  position: absolute;
+  top:-3px;
+  left: -3px;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
   border-style: solid;
   border-width: 3px;
@@ -123,6 +123,8 @@ h2 {
 .roster-mask .action-button {
   text-align: center;
   font-family: 'Oswald', sans-serif;
+  margin-left: 5px;
+  margin-right: 5px;
   border-left-style: solid;
   border-width: 2px;
   border-color: white;
@@ -134,6 +136,7 @@ h2 {
 .roster-mask .action-button:hover {
   border-bottom-style: solid;
   background-color: #F25B21;
+  cursor: pointer;
 }
 
 .roster-resume {
