--- a/builder/css/styles.css
+++ b/builder/css/styles.css
@@ -156,6 +156,7 @@ h2 {
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
+  position: relative;
 }
 
 /***************/
@@ -169,6 +170,20 @@ h2 {
 /************/
 /* Supremes */
 /************/
+.hovered-supreme-panel {
+  position: absolute;
+  top:-3px;
+  left: -3px;
+  width: 100%;
+  height: 100%;
+  -webkit-border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 0 0;
+  border-style: solid;
+  border-width: 3px;
+  border-color: inherit;
+  background: rgba(200, 200, 200, 0.4);
+}
+
 .supreme-origin-mystery {
   border-color: #D00;
 }
@@ -244,6 +259,12 @@ h2 {
   font-size: 1.4em;
 }
 
+.hovered-supreme-panel .supreme-name {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  background: none;
+  border: none;
+}
+
 .supreme-role {
   background: rgba(75, 71, 64, 0.5);
   width: 100%;
@@ -258,6 +279,48 @@ h2 {
     1px 1px 0 #000;
   font-family: 'Bangers', cursive;
   font-size: 1.2em;
+}
+
+.hovered-supreme-panel .supreme-role {
+  background: none;
+  height: auto;
+}
+
+.supreme-actions {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  display: inline-flex;
+}
+
+.supreme-actions-icons {
+  display: inline-flex;
+  margin-left: 10px;
+}
+
+.supreme-action {
+  width: 32px;
+  border-top: solid 2px;
+  border-left: solid 2px;
+  border-right: solid 2px;
+  border-color: #4b3f15;
+  background-color: #c9a838;
+  color: #4b3f15;
+  height: 30px;
+  margin-right: 10px;
+  padding-top: 10px;
+  cursor: pointer;
+  text-align: center;
+  font-size: 20px;
+
+}
+
+.supreme-action:hover {
+  border-color: #000000;
+  background-color: #FCD347;
+  color: #000000;
 }
 
 /* Modal Box */
