--- a/builder/css/styles.css
+++ b/builder/css/styles.css
@@ -159,6 +159,45 @@ h2 {
   position: relative;
 }
 
+.roster-cards {
+  padding: 5px;
+  width: 140px;
+  height: 140px;
+  margin: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #F25B21;
+  position: relative;
+  text-align: center;
+  background-color: #fdedb5;
+}
+
+/***************/
+/* Cards Panel */
+/***************/
+.card-title {
+  font-family: 'Bangers', cursive;
+  color: #F25B21;
+  font-size: 18px;
+}
+
+.card-action {
+  cursor: pointer;
+  font-family: 'Oswald', sans-serif;
+  color: #4b3f15;
+  font-size: 14px;
+}
+.card-action:hover {
+  color: #221100;
+  font-size: 14px;
+  text-decoration: underline;
+}
+.card-action-icon {
+  font-size: 16px;
+}
+
 /***************/
 /* Recruitment */
 /***************/
