--- a/builder/css/icons.css
+++ b/builder/css/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?qewx19');
-  src:  url('fonts/icomoon.eot?qewx19#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?qewx19') format('truetype'),
-    url('fonts/icomoon.woff?qewx19') format('woff'),
-    url('fonts/icomoon.svg?qewx19#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?aeynfx');
+  src:  url('fonts/icomoon.eot?aeynfx#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?aeynfx') format('truetype'),
+    url('fonts/icomoon.woff?aeynfx') format('woff'),
+    url('fonts/icomoon.svg?aeynfx#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-honorary-member:before {
+  content: "\e904";
+}
 .icon-remove-card:before {
   content: "\e902";
 }
