--- a/builder/css/styles.css
+++ b/builder/css/styles.css
@@ -2,6 +2,19 @@ body {
   background-color: #FCD347; /* Melting Sun */
 }
 
+h1 {
+  font-family: 'Bangers', cursive;
+  color: #FFFFFF;
+  text-shadow:
+    -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    2px 2px 0 #000;
+  font-size: 2.8em;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 h2 {
   font-family: 'Bangers', cursive;
   color: #F25B21;
@@ -11,6 +24,14 @@ h2 {
     -1px 1px 0 #000,
     1px 1px 0 #000;
   font-size: 2.3em;
+}
+
+h3 {
+  font-family: 'Oswald', non-serif;
+  color: #000000;
+  font-size: 2.3em;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .global-container {
@@ -37,6 +58,20 @@ h2 {
   color: #F25B21;
   display: inline;
   font-family: 'Bangers', cursive;
+  font-size: 1.8em;
+}
+.menu-box.clickable:hover, .menu-box.clickable:active, .menu-box.clickable:focus {
+  color: #a93f17;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.menu-box a {
+  color: #F25B21;
+  text-decoration: none;
+}
+.menu-box a:hover, .menu-box a:active, .menu-box a:focus {
+  color: #a93f17;
+  text-decoration: underline;
 }
 
 /********************/
@@ -513,6 +548,44 @@ h2 {
   width: 100%;
 }
 
+.input-code {
+  margin-top: 10px;
+}
+
+.input-code label {
+  font-family: 'Oswald', sans-serif;
+  margin-left: 12px;
+  font-size: 16px;
+}
+
+.input-with-button {
+  display: flex;
+}
+
+.input-code .btncopy {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.btncopy {
+  cursor: pointer;
+  background-color: #FCD347;
+  color: #000000;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  margin: 1px;
+  border-color: #F25B21;
+  font-family: 'Oswald', sans-serif;
+}
+
+.btncopy:hover {
+  background: #b09331;
+  border-width: 2px;
+  margin: 0px;
+}
+
+
 /* Button-Icon to go back one step */
 
 .step-back {
@@ -520,4 +593,62 @@ h2 {
   width: 32px;
   height: 32px;
   cursor: pointer;
+}
+
+/****************/
+/** Enter code **/
+/****************/
+.enter-code {
+  display: inline-flex;
+  width: 80%;
+}
+.enter-code .team-code {
+  width: auto;
+  flex-grow: 5;
+  margin: 5px;
+}
+.enter-code .button {
+  flex-grow: 1;
+  margin: 5px;
+  cursor: pointer;
+  background-color: #BEB6A3;
+  color: #F25B21;
+  text-align: center;
+  font-weight: bold;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #F25B21;
+  font-family: 'Bangers', cursive;
+  font-size: 1.6em;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+.enter-code .button:hover {
+  background: #7EBDA4; /* Kids-sized Fedora */
+  border-width: 4px;
+  margin: 3px;
+}
+
+/*************/
+/* About Box */
+/*************/
+.about-text {
+  font-family: 'Oswald', sans-serif;
+}
+
+.about-text a {
+  font-weight: bold;
+  color: #a93f17;
+  text-decoration: none;
+}
+
+.about-text a:hover, .about-text a:active, .about-text a:focus {
+  color: #F25B21;
+  text-decoration: underline;
 }
