--- a/builder/css/icons.css
+++ b/builder/css/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?aeynfx');
-  src:  url('fonts/icomoon.eot?aeynfx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?aeynfx') format('truetype'),
-    url('fonts/icomoon.woff?aeynfx') format('woff'),
-    url('fonts/icomoon.svg?aeynfx#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?9bxijh');
+  src:  url('fonts/icomoon.eot?9bxijh#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?9bxijh') format('truetype'),
+    url('fonts/icomoon.woff?9bxijh') format('woff'),
+    url('fonts/icomoon.svg?9bxijh#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,8 +24,77 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-honorary-member:before {
-  content: "\e904";
+.icon-herovillain:before {
+  content: "\e905";
+}
+.icon-element-air:before {
+  content: "\41";
+}
+.icon-smash:before {
+  content: "\42";
+}
+.icon-element-darkness:before {
+  content: "\44";
+}
+.icon-element-earth:before {
+  content: "\45";
+}
+.icon-element-fire:before {
+  content: "\46";
+}
+.icon-hero:before {
+  content: "\48";
+}
+.icon-element-light:before {
+  content: "\4c";
+}
+.icon-origin-mystery:before {
+  content: "\4d";
+}
+.icon-origin-nature:before {
+  content: "\4e";
+}
+.icon-origin-science:before {
+  content: "\53";
+}
+.icon-villain:before {
+  content: "\56";
+}
+.icon-element-water:before {
+  content: "\57";
+}
+.icon-agility:before {
+  content: "\61";
+}
+.icon-bounding:before {
+  content: "\62";
+}
+.icon-defense:before {
+  content: "\64";
+}
+.icon-energy:before {
+  content: "\65";
+}
+.icon-fly:before {
+  content: "\66";
+}
+.icon-blink:before {
+  content: "\6b";
+}
+.icon-mind:before {
+  content: "\6d";
+}
+.icon-spirit:before {
+  content: "\70";
+}
+.icon-strength:before {
+  content: "\73";
+}
+.icon-sprint:before {
+  content: "\74";
+}
+.icon-wall-crawling:before {
+  content: "\77";
 }
 .icon-remove-card:before {
   content: "\e902";
@@ -38,6 +107,9 @@
 }
 .icon-cards:before {
   content: "\e900";
+}
+.icon-honorary-member:before {
+  content: "\e904";
 }
 .icon-undo:before {
   content: "\e965";
